# master_thesis_2015

./: README.md
Introduction/Source/: CMakeLists.txt  HelloWorld.cpp
Trial_0/: Expert Session02.csv  LiveDataFile  Participant011.csv  angle_plane_calculation.py  check_angle_jitter.py  combined-visualization.py  demo-video.py  jitter-trace-video.py  jitter-trace-visualization.py  jitter_trace_visualization.py  knife-angle-video.py  knife-angle-visualization.py  knife_angle_visualization.py  performance_strokes.py  pyvicon.py  sampleLiveDataFile.txt  visualization.py
Trial_0/Trial_0.xcodeproj/: project.pbxproj
Trial_0/Trial_0.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Trial_0/Trial_0.xcodeproj/project.xcworkspace/xcshareddata/: Trial_0.xccheckout
Trial_0/Trial_0.xcodeproj/project.xcworkspace/xcuserdata/urmi.xcuserdatad/: UserInterfaceState.xcuserstate
Trial_0/Trial_0.xcodeproj/xcuserdata/urmi.xcuserdatad/xcschemes/: Trial_0.xcscheme  xcschememanagement.plist
